fix for java 1.3 (Boolean.valueOf) AWPP now filters jrexx